--- a/_website/fox/fox-epistle.html
+++ b/_website/fox/fox-epistle.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="style/style.css" />
+    <script src="code.js" type="text/javascript"></script>
 </head>
 
 <body>
     <h1>George Fox</h1>
-<p><audio controls><source src="fox-walk-cheerfully.m4a" type="audio/mp4">Your browser does not support the audio element. <a href="fox-walk-cheerfully.m4a" title="" class="audio"><span class="fa-solid fa-play">></span></a></audio></p>
+<p><audio id="my-audio" controls><source src="fox-walk-cheerfully.m4a" type="audio/mp4">Your browser does not support the audio element. <a href="fox-walk-cheerfully.m4a" title="" class="audio"><span class="fa-solid fa-play">></span></a></audio></p>
 <p>source: <a href="https://flp-assets.nyc3.digitaloceanspaces.com/en/george-fox/journal/original/Journal_of_George_Fox--original.pdf">George Fox Journal</a> pp. 233-234</p>
 <p>About this time I was moved to give forth the following exhortation to Friends in the ministry:</p>
 <p>Friends, “In the power of life and wisdom, and dread of the Lord God of life, and heaven, and earth, dwell; that in the wisdom of God over all ye may be preserved, and be a terror to all the adversaries of God, and a dread, answering that of God in them all, spreading the truth, awakening the witness, confounding deceit, gathering out of transgression into the life, the covenant of light and peace with God.</p>
