--- a/_website/index.html
+++ b/_website/index.html
@@ -7,14 +7,49 @@
     <link rel="stylesheet" href="style/style.css" />
     <script src="code.js" type="text/javascript"></script>
     <script src="word_timestamps.js" type="text/javascript"></script>
+    <style>
+        .progress {
+            border: solid black;
+            background-color: white;
+            width: 400px;
+            height: 100%;
+            float: left;
+            margin-right: 10px;
+        }
+
+        .duration {
+            vertical-align: middle;
+        }
+
+        .progress_selection {
+            background-color: black;
+            height: 100%;
+            width: 10px;
+        }
+
+        #widget {
+            height: 20px;
+            width: 100%;
+            float: none;
+        }
+    </style>
 </head>
 
 <body>
     <h1>George Fox</h1>
-    <p><audio id="my-audio" controls>
+    <p>
+        <audio id="my-audio" controls>
             <source src="fox-walk-cheerfully.m4a" type="audio/mp4">Your browser does not support the audio element. <a
                 href="fox-walk-cheerfully.m4a" title="" class="audio"><span class="fa-solid fa-play">></span></a>
-        </audio></p>
+        </audio>
+    </p>
+    <div id="widget">
+        <div class="progress">
+            <div class="progress_selection"></div>
+        </div>
+        <p class="duration">4:00</p>
+    </div>
+    <hr />
     <p>source: <a
             href="https://flp-assets.nyc3.digitaloceanspaces.com/en/george-fox/journal/original/Journal_of_George_Fox--original.pdf">George
             Fox Journal</a> pp. 233-234</p>
