on selection make parent element have blue border

--- a/_website/index.html
+++ b/_website/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="style/style.css" />
     <script src="code.js" type="text/javascript"></script>
+    <script src="selected.js" type="text/javascript"></script>
     <script src="word_timestamps.js" type="text/javascript"></script>
     <style>
         .progress {
@@ -53,8 +54,10 @@
     <p>source: <a
             href="https://flp-assets.nyc3.digitaloceanspaces.com/en/george-fox/journal/original/Journal_of_George_Fox--original.pdf">George
             Fox Journal</a> pp. 233-234</p>
-    <p>About this time I was moved to give forth the following exhortation to Friends in the ministry:</p>
-    <p>Friends, “In the power of life and wisdom, and dread of the Lord God of life, and heaven, and earth, dwell; that
+    <div id="target">
+    <p>About this time</p>
+    <p>I was moved to give forth the following exhortation to Friends in the ministry:</p>
+    <p>Friends, “In the <span style="font-weight: bold">power of life and wisdom</span>, and dread of the Lord God of life, and heaven, and earth, dwell; that
         in the wisdom of God over all ye may be preserved, and be a terror to all the adversaries of God, and a dread,
         answering that of God in them all, spreading the truth, awakening the witness, confounding deceit, gathering out
         of transgression into the life, the covenant of light and peace with God.</p>
@@ -115,7 +118,7 @@
         faithfully, and in the strength and power of the Lord: and be obedient to the power; for that will save you out
         of the hands of unreasonable men, and preserve you over the world to himself. Hereby you may live in the
         kingdom, that stands in power, which hath no end; where glory and life is.”</p>
-
+</div>
 </body>
 
 </html>
