make text selectable

--- a/_website/index.html
+++ b/_website/index.html
@@ -33,6 +33,11 @@
             width: 100%;
             float: none;
         }
+
+        #content {
+            -webkit-user-select: all;
+            user-select: all;
+        }
     </style>
 </head>
 
